kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
          resources:
            requests:
              cpu: 100m
            limits: 
              cpu: 200m
