kubernetes/qa-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-api-deployment
  labels:
    app: qa-api
spec:
  selector:
    matchLabels:
      app: qa-api
  template:
    metadata:
      labels:
        app: qa-api
    spec:
      containers:
        - name: qa-api
          image: qa-api:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 7777
          resources:
            requests:
              cpu: 100m
            limits: 
              cpu: 200m
