kubernetes/qa-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-ui-deployment
  labels:
    app: qa-ui
spec:
  selector:
    matchLabels:
      app: qa-ui
  template:
    metadata:
      labels:
        app: qa-ui
    spec:
      containers:
        - name: qa-ui
          image: qa-ui:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
            limits: 
              cpu: 200m
        - name: nginx
          image: nginx:latest
          ports: 
            - containerPort: 7800
          resources: 
            requests: 
              cpu: 50m
            limits: 
              cpu: 100m
