kubernetes/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items: 
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata: 
  name: nginx
spec: 
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targerPort: 80
    nodePort: 30008
  selector: 
    app: nginx
