kubernetes/qa-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-api-service
spec:
  ports:
    - port: 7777
      targetPort: http
      protocol: TCP
  selector:
    app: qa-api
