kubernetes/qa-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-ui-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: "TCP"
  selector:
    app: qa-ui
