kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: qa-api-service
                port: 
                  number: 7777
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: qa-ui-service
                port:
                  number: 3000
